--- a/src/locales/ru/translations.json
+++ b/src/locales/ru/translations.json
@@ -14,7 +14,8 @@
 		"cta": "Узнать о нас больше"
 	},
 	"activitieslider": {
-		"title": "Основные направления <br /> сферы деятельности",
+		"title-1": "Основные направления",
+		"title-2": "сферы деятельности",
 		"text": "Мощная научно-техническая база предприятия позволяет нам решать задачи любой сложности",
 		"slides": [
 			{
