--- a/src/locales/ru/translations.json
+++ b/src/locales/ru/translations.json
@@ -39,13 +39,12 @@
 	},
 	"tradeinvestments": {
 		"title": "Tорговое финансирование",
-		"text-1": "Мы помогаем компаниям-импортерам избежать 100% предоплаты при расчетах с поставщиками и предлагаем low-cost финансирование на краткосрочной, среднесрочной и долгосрочной основе.",
+		"text-1": "Мы помогаем компаниям-импортерам избежать 100% предоплаты при расчетах с поставщиками и предлагаем финансирование на краткосрочной, среднесрочной и долгосрочной основе.",
 		"slides": [
 			{
 				"title": "Если вы импортер",
 				"arguments": [
 					"нет необходимости выводить оборотные средства",
-					"доступ к low-cost финансированию",
 					"возможность сотрудничать с поставщиками на наиболее выгодных условиях и по наиболее выгодным ценам",
 					"отсутствие рисков не отгрузки поставщиком товара при оплате по договору"
 				]
