--- a/src/locales/ru/translations.json
+++ b/src/locales/ru/translations.json
@@ -63,19 +63,19 @@
 	"results": {
 		"title": "Факты, цифры, результаты",
 		"year": {
-			"value": "2015",
-			"text": "Дата создания EPI Group"
+			"value": "15+",
+			"text": "Лет опыта"
 		},
 		"projects": {
-			"value": "40+",
+			"value": "100+",
 			"text": "Проектов"
 		},
 		"clients": {
-			"value": "20+",
-			"text": "Клиентов"
+			"value": "50+",
+			"text": "Клиентов и партнеров"
 		},
 		"countries": {
-			"value": "15+",
+			"value": "20+",
 			"text": "Стран по всему миру"
 		}
 	},
@@ -99,5 +99,109 @@
 	},
 	"footer": {
 		"license": "© 2020 EPI GROUP s.r.o"
+	},
+	"resoursesPage": {
+		"title": "Полезные ископаемые и металлы",
+		"content": {
+			"title": "Полезные ископаемые и металлы",
+			"subtitle": "",
+			"text": "За счет диверсификации в географическом отношении и стратегических связей в различных странах с нами вы будете иметь возможность принимать участие в ограниченных, специализированных поставках полезных ископаемых, металлов и производной продукции.",
+			"list": ["", "", ""]
+		},
+		"blocks": [
+			[
+				[
+					"Концентрат рутиловый",
+					"Концентрат ильменитовый",
+					"Концентрат цирконовый",
+					"Концентрат цирконовый порошкообразный",
+					"Концентрат ставролитовый"
+				],
+				[
+					"Титан губчатый",
+					"Титановый шлак",
+					"Титановые слитки",
+					"Медь",
+					"Алюминий"
+				]
+			],
+			[
+				"Дистен-силлимантовый концентрат зернистый",
+				"Дистен-силлимантовый концентрат порошкообразный",
+				"Песок формовочный кварцевый",
+				"Песок плотный природный",
+				"Песок кварцевый для стекольной промышленности"
+			]
+		],
+		"blockNames": ["Металлы", "Песок"]
+	},
+	"fertilizersPage": {
+		"title": " Удобрения",
+		"content": {
+			"title": "Удобрения",
+			"subtitle": "",
+			"text": "Наша компания предлагает широкий спектр удобрений для аграрной промышленности, который позволяет удовлетворить потребности клиентов в полном объеме",
+			"list": ["", "", ""]
+		},
+		"blocks": [
+			[
+				"Карбамид",
+				"Нитрат аммония",
+				"Кальций нитрат аммония",
+				"Сульфат аммония",
+				"Карбамид-аммиачная смесь"
+			],
+			[
+				"Диаммонийфосфат",
+				"Моноаммонийфосфат",
+				"Тройной суперфосфат",
+				"Одиночный суперфосфат"
+			],
+			[
+				"15-15-15",
+				"16-16-16",
+				"16-20-0",
+				"20-20-0",
+				"20-10-10",
+				"16-16-8",
+				"10-26-26",
+				"16-8-8",
+				"и многие другие специальные смеси NP / NPK с микроэлементами или без них"
+			],
+			[
+				"Зернистая и формованная сера",
+				"Дробленая кормовая сера",
+				"Каменная фосфатно-фосфорная кислота",
+				"Серная кислота"
+			]
+		],
+		"blockNames": [
+			"Азотные удобрения",
+			"Фосфорные удобрения",
+			"Комплексные удобрения",
+			"Сырье для производства"
+		]
+	},
+	"ammoniaPage": {
+		"title": "Ammonia",
+		"content": {
+			"title": "Ammonia",
+			"subtitle": "",
+			"text": "We offer ammonia of exclusively certified quality from reliable suppliers that meets the highest international quality standards.",
+			"list": ["", "", ""]
+		}
+	},
+	"energyPage": {
+		"title": "Энергетика",
+		"content": {
+			"title": "Энергетика",
+			"subtitle": "Наша команда имеет огромный опыт работы в разных сегментах энергетики, что позволяет нам понимать текущую ситуацию и тренды развития на рынках природного газа, нефти и угольной промышленности.",
+			"text": "Наш опыт является гарантией конкурентных условий поставки энергоресурсов нашим клиентам.",
+			"list": [
+				"выгодные условия сотрудничества",
+				"мировые стандарты качества",
+				"беспрерывная и эффективная работа"
+			]
+		}
 	}
 }
