--- a/src/locales/cze/translations.json
+++ b/src/locales/cze/translations.json
@@ -1,103 +1,207 @@
 {
 	"header": ["Главная", "О компании", "Экспертиза", "Контакты"],
 	"hero": {
-		"title": "Мы знаем как добиться максимальной прибыли при проведении успешных торговых сделок",
-		"cta": "Отправить запрос"
+		"title": "Víme, jak maximalizovat zisky při provádění úspěšných obchodních transakcí",
+		"cta": "Poslat žádost"
 	},
 	"about": {
-		"title": "EPI group — независимая трейдинговая компания",
-		"text-1": "Мы работаем открыто, честно, прозрачно, предлагая надежное партнерство каждому заказчику. Главным приоритетом нашей деятельности является",
-		"text-2": "перед каждым нашим партнером.",
-		"text-3": "EPI group предлагает исключительно сертифицированную продукцию от надежных поставщиков, которая соответствует самым высоким мировым стандартам качества.",
-		"accent-text-1": "качество",
-		"accent-text-2": "и ответственность",
-		"cta": "Узнать о нас больше"
+		"title": "EPI group — nezávislá obchodní společnost",
+		"text-1": "Pracujeme otevřeně, čestně, transparentně a každému zákazníkovi nabízíme spolehlivé partnerství. Hlavní prioritou naší činnosti je kvalita a odpovědnost",
+		"text-2": "vůči každému z našich partnerů.",
+		"text-3": "Skupina EPI nabízí výhradně certifikované produkty od spolehlivých dodavatelů, které splňují nejvyšší mezinárodní standarty kvality.",
+		"accent-text-1": "",
+		"accent-text-2": "",
+		"cta": "Dozvědět se více o nás"
 	},
 	"activitieslider": {
-		"title": "Основные направления <br /> сферы деятельности",
-		"text": "Мощная научно-техническая база предприятия позволяет нам решать задачи любой сложности",
+		"title-1": "Hlavní směry",
+		"title-2": "oblasti činnosti",
+		"text": "Silná vědecká a technická základna podniku nám umožňuje řešit problémy jakékoli složitosti",
 		"slides": [
 			{
-				"title": "Энергетика",
-				"text": "Наша команда имеет огромный опыт работы в разных сегментах энергетики, что позволяет нам понимать текущую ситуацию и тренды развития на рынках природного газа, нефти и угольной промышленности."
+				"title": "Energetika",
+				"text": "Náš tým má rozsáhlé zkušenosti z různých odvětví energetiky, což nám umožňuje pochopit současnou situaci a vývojové trendy na trzích se zemním plynem, ropou a uhlím."
 			},
 			{
-				"title": "Полезные ископаемые и металлы",
-				"text": "За счет диверсификации в географическом отношении и стратегических связей в различных странах с нами вы будете иметь возможность принимать участие в ограниченных, специализированных поставках полезных ископаемых, металлов и производной продукции"
+				"title": "Minerály a kovy",
+				"text": "Diverzifikací geografického a strategického propojení v různých zemích se budete moci s námi podílet na vymezené specializované dodávce nerostů, kovů a derivátů."
 			},
 			{
-				"title": "Удобрения",
-				"text": "Наша компания предлагает широкий спектр удобрений для аграрной промышленности, который позволяет удовлетворить потребности клиентов в полном объеме."
+				"title": "Hnojiva",
+				"text": "Naše společnost nabízí širokou škálu hnojiv pro zemědělství, což nám umožňuje plně uspokojit potřeby našich zákazníků."
 			},
 			{
-				"title": "Aммиак",
-				"text": "Мы предлагаем аммиак исключительно сертифицированного качества от надежных поставщиков, который соответствует самым высоким мировым стандартам качества."
+				"title": "Amoniak",
+				"text": "Nabízíme čpavek výhradně certifikované kvality od spolehlivých dodavatelů, kteří splňují nejvyšší mezinárodní standarty kvality."
 			}
 		],
-		"cta": "Отправить запрос"
+		"cta": "Poslat žádost"
 	},
 	"tradeinvestments": {
-		"title": "Tорговое финансирование",
-		"text-1": "Мы помогаем компаниям-импортерам избежать 100% предоплаты при расчетах с поставщиками и предлагаем low-cost финансирование на краткосрочной, среднесрочной и долгосрочной основе.",
+		"title": "Obchodní financování",
+		"text-1": "Pomáháme dovážejícím společnostem vyhnout se 100% platbě předem při vypořádání s dodavately a financování krátkodobé, střední a dlouhodobé.",
 		"slides": [
 			{
-				"title": "Если вы импортер",
+				"title": "Pokud jste dovozce",
 				"arguments": [
-					"нет необходимости выводить оборотные средства",
-					"доступ к low-cost финансированию",
-					"возможность сотрудничать с поставщиками на наиболее выгодных условиях и по наиболее выгодным ценам",
-					"отсутствие рисков не отгрузки поставщиком товара при оплате по договору"
+					"není třeba použít oběžná aktiva",
+					"příležitost spolupracovat s dodavately za nejvýhodnějších podmínek a za nejvýhodnější ceny",
+					"žádná rizika, že dodavatel zboží po platbě na základě smlouvy nedodá"
 				]
 			},
 			{
-				"title": "Если вы экспортер",
+				"title": "Pokud jste vývozce",
 				"arguments": [
-					"гарантия оплаты отгруженного товара",
-					"увеличение объема поставок",
-					"расширение клиентской базы за счет более выгодных условий доставки и оплаты"
+					"záruka platby za zaslané zboží",
+					"zvýšení objemu dodávek",
+					"rozšíření klientské základny z důvodu výhodnějších dodacích a platebních podmínek"
 				]
 			}
 		],
-		"cta": "Отправить запрос"
+		"cta": "Poslat žádost"
 	},
 	"results": {
-		"title": "Факты, цифры, результаты",
+		"title": "Fakta, čísla, výsledky",
 		"year": {
-			"value": "2015",
-			"text": "Дата создания EPI Group"
+			"value": "15+",
+			"text": "Let zkušeností"
 		},
 		"projects": {
-			"value": "40+",
+			"value": "100+",
 			"text": "Проектов"
 		},
 		"clients": {
-			"value": "20+",
-			"text": "Клиентов"
+			"value": "50+",
+			"text": "Partneři a klientů"
 		},
 		"countries": {
-			"value": "15+",
-			"text": "Стран по всему миру"
+			"value": "20+",
+			"text": "Zemí po celém světě"
 		}
 	},
 	"contact": {
-		"title": "Отправьте нам запрос",
-		"text-1": "Хотите узнать больше о EPI group s.r.o.?",
-		"text-2": "От услуг до подхода и людей — мы рады общению",
+		"title": "Pošlete nám žádost",
+		"text-1": "Chcete se dozvědět více o skupině EPI s.r.o.?",
+		"text-2": "Od služeb k přístupu a lidem - rádi komunikujeme",
 		"tel": "+44 60 9372 5690",
 		"tellink": "tel:+44 60 9372 5690",
 		"email": "epigroup@example.com",
 		"emaillink": "mailto:epigroup.cz@gmail.com",
-		"cta": "Отправить запрос",
-		"ctasent": "Отправлено",
+		"cta": "Poslat žádost",
+		"ctasent": "Poslal",
 		"formplaceholders": {
-			"name": "Имя",
-			"company": "Компания",
-			"email": "Электронный адрес",
-			"tel": "Телефон (необязательно)",
-			"message": "Сообщение"
+			"name": "Název",
+			"company": "Společnost",
+			"email": "Emailová adresa",
+			"tel": "Telefon (volitelné)",
+			"message": "Zpráva"
 		}
 	},
 	"footer": {
 		"license": "© 2020 EPI GROUP s.r.o"
+	},
+	"resoursesPage": {
+		"title": "Minerály a kovy",
+		"content": {
+			"title": "Minerály a kovy",
+			"subtitle": "",
+			"text": "Diverzifikací geografického a strategického propojení v různých zemích se budete moci s námi podílet na vymezené specializované dodávce nerostů, kovů a derivátů.",
+			"list": ["", "", ""]
+		},
+		"blocks": [
+			[
+				[
+					"Koncentrát rutilu",
+					"Koncentrát ilmenitu",
+					"Koncentrát zirkónu",
+					"Práškový koncentrát zirkónu",
+					"Práškový koncentrát zirkónu"
+				],
+				[
+					"Titanová houba",
+					"Titanová struska",
+					"Titanové ingoty",
+					"Měď",
+					"Hliník"
+				]
+			],
+			[
+				"Granular distyne-sillimant concentrate",
+				"Powdered distyne-sillimant concentrate",
+				"Powdered distyne-sillimant concentrate",
+				"Dense natural sand",
+				"Quartz sand for the glass industry"
+			]
+		],
+		"blockNames": ["Kovy", "Písek"]
+	},
+	"fertilizersPage": {
+		"title": "Hnojiva",
+		"content": {
+			"title": "Hnojiva",
+			"subtitle": "",
+			"text": "Naše společnost nabízí širokou škálu hnojiv pro zemědělství, což nám umožňuje plně uspokojit potřeby našich zákazníků",
+			"list": ["", "", ""]
+		},
+		"blocks": [
+			[
+				"Dusičnan amonný",
+				"Dusičnan amonný vápenatý",
+				"Dusičnan amonný vápenatý",
+				"Síran amonný",
+				"Směs močoviny a amoniaku"
+			],
+			[
+				"Diamonium fosfát",
+				"Monoamonium fosfát",
+				"Trojitý superfosfát",
+				"Superfosfát"
+			],
+			[
+				"15-15-15",
+				"16-16-16",
+				"16-20-0",
+				"20-20-0",
+				"20-10-10",
+				"16-16-8",
+				"10-26-26",
+				"16-8-8",
+				"A mnoho dalších speciálních směsí NP / NPK se stopovými prvky nebo bez nich"
+			],
+			[
+				"Granulovaná a formovaná síra",
+				"Drcená krmná síra",
+				"Kyselina fosfor-fosforečná",
+				"Kyselina sírová"
+			]
+		],
+		"blockNames": [
+			"Dusíkatá hnojiva",
+			"Fosforečná hnojiva",
+			"Složitá hnojiva",
+			"Suroviny pro výrobu"
+		]
+	},
+	"ammoniaPage": {
+		"title": "Amoniak",
+		"content": {
+			"title": "Amoniak",
+			"subtitle": "",
+			"text": "Nabízíme čpavek výhradně certifikované kvality od spolehlivých dodavatelů, kteří splňují nejvyšší mezinárodní standarty kvality.",
+			"list": ["", "", ""]
+		}
+	},
+	"energyPage": {
+		"title": "Energetika",
+		"content": {
+			"title": "Energetika",
+			"subtitle": "Náš tým má rozsáhlé zkušenosti z různých odvětví energetiky, což nám umožňuje pochopit současnou situaci a vývojové trendy na trzích se zemním plynem, ropou a uhlím.",
+			"text": "Naše zkušenosti jsou zárukou konkurenčních podmínek pro dodávky energetických zdrojů našim zákazníkům.",
+			"list": [
+				"příznivé podmínky spolupráce",
+				"světové standarty kvality",
+				"nepřetržitá a efektivní práce"
+			]
+		}
 	}
 }
