--- a/src/locales/ru/translations.json
+++ b/src/locales/ru/translations.json
@@ -145,41 +145,43 @@
 		},
 		"blocks": [
 			[
-				"Карбамид",
-				"Нитрат аммония",
-				"Кальций нитрат аммония",
-				"Сульфат аммония",
-				"Карбамид-аммиачная смесь"
+				[
+					"Карбамид",
+					"Нитрат аммония",
+					"Кальций нитрат аммония",
+					"Сульфат аммония",
+					"Карбамид-аммиачная смесь"
+				],
+				[
+					"Диаммонийфосфат",
+					"Моноаммонийфосфат",
+					"Тройной суперфосфат",
+					"Одиночный суперфосфат"
+				]
 			],
 			[
-				"Диаммонийфосфат",
-				"Моноаммонийфосфат",
-				"Тройной суперфосфат",
-				"Одиночный суперфосфат"
-			],
-			[
-				"15-15-15",
-				"16-16-16",
-				"16-20-0",
-				"20-20-0",
-				"20-10-10",
-				"16-16-8",
-				"10-26-26",
-				"16-8-8",
-				"и многие другие специальные смеси NP / NPK с микроэлементами или без них"
-			],
-			[
-				"Зернистая и формованная сера",
-				"Дробленая кормовая сера",
-				"Каменная фосфатно-фосфорная кислота",
-				"Серная кислота"
+				[
+					"15-15-15",
+					"16-16-16",
+					"16-20-0",
+					"20-20-0",
+					"20-10-10",
+					"16-16-8",
+					"10-26-26",
+					"16-8-8",
+					"и многие другие специальные смеси NP / NPK с микроэлементами или без них"
+				],
+				[
+					"Зернистая и формованная сера",
+					"Дробленая кормовая сера",
+					"Каменная фосфатно-фосфорная кислота",
+					"Серная кислота"
+				]
 			]
 		],
 		"blockNames": [
-			"Азотные удобрения",
-			"Фосфорные удобрения",
-			"Комплексные удобрения",
-			"Сырье для производства"
+			["Азотные удобрения", "Фосфорные удобрения"],
+			["Комплексные удобрения", "Сырье для производства"]
 		]
 	},
 	"ammoniaPage": {
