--- a/src/locales/ru/translations.json
+++ b/src/locales/ru/translations.json
@@ -111,29 +111,31 @@
 		"blocks": [
 			[
 				[
-					"Концентрат рутиловый",
-					"Концентрат ильменитовый",
-					"Концентрат цирконовый",
-					"Концентрат цирконовый порошкообразный",
-					"Концентрат ставролитовый"
+					[
+						"Концентрат рутиловый",
+						"Концентрат ильменитовый",
+						"Концентрат цирконовый",
+						"Концентрат цирконовый порошкообразный",
+						"Концентрат ставролитовый"
+					],
+					[
+						"Титан губчатый",
+						"Титановый шлак",
+						"Титановые слитки",
+						"Медь",
+						"Алюминий"
+					]
 				],
 				[
-					"Титан губчатый",
-					"Титановый шлак",
-					"Титановые слитки",
-					"Медь",
-					"Алюминий"
+					"Дистен-силлимантовый концентрат зернистый",
+					"Дистен-силлимантовый концентрат порошкообразный",
+					"Песок формовочный кварцевый",
+					"Песок плотный природный",
+					"Песок кварцевый для стекольной промышленности"
 				]
-			],
-			[
-				"Дистен-силлимантовый концентрат зернистый",
-				"Дистен-силлимантовый концентрат порошкообразный",
-				"Песок формовочный кварцевый",
-				"Песок плотный природный",
-				"Песок кварцевый для стекольной промышленности"
 			]
 		],
-		"blockNames": ["Металлы", "Песок"]
+		"blockNames": [["Металлы", "Песок"]]
 	},
 	"fertilizersPage": {
 		"title": " Удобрения",
@@ -169,7 +171,7 @@
 					"16-16-8",
 					"10-26-26",
 					"16-8-8",
-					"и многие другие специальные смеси NP / NPK с микроэлементами или без них"
+					"И многие другие специальные смеси NP / NPK с микроэлементами или без них"
 				],
 				[
 					"Зернистая и формованная сера",
