--- a/src/locales/en/translations.json
+++ b/src/locales/en/translations.json
@@ -191,11 +191,11 @@
 		]
 	},
 	"ammoniaPage": {
-		"title": "Aммиак",
+		"title": "Ammonia",
 		"content": {
-			"title": "Aммиак",
+			"title": "Ammonia",
 			"subtitle": "",
-			"text": "Мы предлагаем аммиак исключительно сертифицированного качества от надежных поставщиков, который соответствует самым высоким мировым стандартам качества.",
+			"text": "We offer ammonia of exclusively certified quality from reliable suppliers that meets the highest international quality standards.",
 			"list": ["", "", ""]
 		}
 	},
