--- a/src/locales/ru/translations.json
+++ b/src/locales/ru/translations.json
@@ -20,19 +20,23 @@
 		"slides": [
 			{
 				"title": "Энергетика",
-				"text": "Наша команда имеет огромный опыт работы в разных сегментах энергетики, что позволяет нам понимать текущую ситуацию и тренды развития на рынках природного газа, нефти и угольной промышленности."
+				"text": "Наша команда имеет огромный опыт работы в разных сегментах энергетики, что позволяет нам понимать текущую ситуацию и тренды развития на рынках природного газа, нефти и угольной промышленности.",
+				"url": "energy"
 			},
 			{
 				"title": "Полезные ископаемые и металлы",
-				"text": "За счет диверсификации в географическом отношении и стратегических связей в различных странах с нами вы будете иметь возможность принимать участие в ограниченных, специализированных поставках полезных ископаемых, металлов и производной продукции"
+				"text": "За счет диверсификации в географическом отношении и стратегических связей в различных странах с нами вы будете иметь возможность принимать участие в ограниченных, специализированных поставках полезных ископаемых, металлов и производной продукции",
+				"url": "resourses"
 			},
 			{
 				"title": "Удобрения",
-				"text": "Наша компания предлагает широкий спектр удобрений для аграрной промышленности, который позволяет удовлетворить потребности клиентов в полном объеме."
+				"text": "Наша компания предлагает широкий спектр удобрений для аграрной промышленности, который позволяет удовлетворить потребности клиентов в полном объеме.",
+				"url": "fertilizers"
 			},
 			{
 				"title": "Aммиак",
-				"text": "Мы предлагаем аммиак исключительно сертифицированного качества от надежных поставщиков, который соответствует самым высоким мировым стандартам качества."
+				"text": "Мы предлагаем аммиак исключительно сертифицированного качества от надежных поставщиков, который соответствует самым высоким мировым стандартам качества.",
+				"url": "ammonia"
 			}
 		],
 		"cta": "Отправить запрос"
