--- a/src/locales/cze/translations.json
+++ b/src/locales/cze/translations.json
@@ -89,8 +89,8 @@
 		"text-2": "Od služeb k přístupu a lidem - rádi komunikujeme",
 		"tel": "+44 60 9372 5690",
 		"tellink": "tel:+44 60 9372 5690",
-		"email": "epigroup@example.com",
-		"emaillink": "mailto:epigroup.cz@gmail.com",
+		"email": "info@epigroup.cz",
+		"emaillink": "mailto:info@epigroup.cz",
 		"cta": "Poslat žádost",
 		"ctasent": "Poslal",
 		"formplaceholders": {
