--- a/src/locales/en/translations.json
+++ b/src/locales/en/translations.json
@@ -89,8 +89,8 @@
 		"text-2": "From services to approach and people, we are happy to communicate with you.",
 		"tel": "+44 60 9372 5690",
 		"tellink": "tel:+44 60 9372 5690",
-		"email": "epigroup@example.com",
-		"emaillink": "mailto:epigroup.cz@gmail.com",
+		"email": "info@epigroup.cz",
+		"emaillink": "mailto:info@epigroup.cz",
 		"cta": "Send a request",
 		"ctasent": "Sent",
 		"formplaceholders": {
