--- a/src/locales/ru/translations.json
+++ b/src/locales/ru/translations.json
@@ -89,8 +89,8 @@
 		"text-2": "От услуг до подхода и людей — мы рады общению",
 		"tel": "+44 60 9372 5690",
 		"tellink": "tel:+44 60 9372 5690",
-		"email": "epigroup@example.com",
-		"emaillink": "mailto:epigroup.cz@gmail.com",
+		"email": "info@epigroup.cz",
+		"emaillink": "mailto:info@epigroup.cz",
 		"cta": "Отправить запрос",
 		"ctasent": "Отправлено",
 		"formplaceholders": {
