--- a/src/locales/en/translations.json
+++ b/src/locales/en/translations.json
@@ -11,10 +11,10 @@
 		"text-3": "EPI group offers exclusively certified products from reliable suppliers that meet the highest international quality standards.",
 		"accent-text-1": "quality",
 		"accent-text-2": "and responsibility",
-		"cta": "More about us"
+		"cta": "Find out more"
 	},
 	"activitieslider": {
-		"title-1": "Major domains",
+		"title-1": "Range of services",
 		"title-2": "",
 		"text": "Powerful scientific and technical base of the enterprise allows us to solve problems of any complexity",
 		"slides": [
@@ -43,7 +43,7 @@
 	},
 	"tradeinvestments": {
 		"title": "Trade finance",
-		"text-1": "We help importing companies avoid 100% prepayment in settlements with suppliers and offer financing on short, medium and long-term basis.",
+		"text-1": "We help importing companies avoid 100% prepayment in settlements with suppliers and offer low-cost financing on short, medium and long-term basis.",
 		"slides": [
 			{
 				"title": "If you are an importer",
