menu cze translation

--- a/src/locales/cze/translations.json
+++ b/src/locales/cze/translations.json
@@ -1,5 +1,5 @@
 {
-	"header": ["Главная", "О компании", "Экспертиза", "Контакты"],
+	"header": ["Domovská", "O firmě", "Odbornost", "Kontakty"],
 	"hero": {
 		"title": "Víme, jak maximalizovat zisky při provádění úspěšných obchodních transakcí",
 		"cta": "Poslat žádost"
